style updates for pre overflow issues

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -264,6 +264,14 @@ kbd,
 	white-space: pre;
 	margin-bottom: 10px;
 	border-radius: 0px;
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	-ms-word-break: break-all;
+	word-break: break-all;
+	word-break: break-word;
+	-ms-hyphens: auto;
+	-webkit-hyphens: auto;
+	hyphens: auto;
 }
 
 .c9-site-title,
